# tiny_engine

./: .gitignore  README.md  _vizdoom.ini  app.py  azure_train.py  config.py  model.py  move_files.sh  pyproject.toml  train.py
environment/: tiny_engine_env.yml
frontend/: package.json
frontend/src/app/: page.tsx
src/: config.py  model.py  pyproject.toml  train.py
src/tiny_engine.egg-info/: PKG-INFO  requires.txt
