[project]
name = "tiny-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11 <3.13"
dependencies = [
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl",
    "diffusers>=0.27.2,<0.28.0",
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl",
    "pandas>=2.2.0,<3.0.0",
    "pillow>=10.2.0,<11.0.0",
    "stable-baselines3[extra]>=2.3.0,<3.0.0",
    "transformers>=4.40.0,<5.0.0",
    "accelerate>=0.29.0,<0.30.0",
    "tqdm>=4.66.0,<5.0.0",
    "vizdoom>=1.2.3,<2.0.0",
    "huggingface-hub>=0.22.0,<0.23.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
