[project]
name = "tiny-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "vizdoom==1.1.14",
    "numpy==1.26.1",
    "pandas==2.1.2",
    "opencv-python==4.8.1.78",
    "matplotlib==3.8.0",
    "pygame==2.5.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 